[project]
name = "tweet-sentiment-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Inre Leppik",email = "ileppik@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (==2.3.0)",
    "torchaudio (==2.3.0)",
    "torchvision (==0.18.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "transformers (==4.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
